wither_derive/tests/fail/model-write-concern-ack-invalid.stderr
error: malformed attribute

  = help: expected literal

 --> $DIR/model-write-concern-ack-invalid.rs:5:1
  |
5 | #[model(write_concern(w=WriteConcern::Majority, w_timeout=10, journal=false))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `write_concern` found for struct `DerivedModel` in the current scope
  --> $DIR/model-write-concern-ack-invalid.rs:12:27
   |
6  | struct DerivedModel {
   | ------------------- function or associated item `write_concern` not found for this
...
12 |     assert!(DerivedModel::write_concern().is_none());
   |                           ^^^^^^^^^^^^^ function or associated item not found in `DerivedModel`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `write_concern`, perhaps you need to implement it:
           candidate #1: `Model`
